# pub_CompDec_v4pfclip_01

./: .gitignore  LICENSE  README.md  pyproject.toml
compdec_v4pfclip_01/utils/: config_task.py
compdec_v4pfclip_01/utils/structures/: __init__.py  bhv_data.py  eye_data.py  lfp_data.py  neuron_data.py  population_data.py  results.py  spike_data.py
compdec_v4pfclip_01/utils/trials/: align_trials.py  firing_rate.py  select_trials.py  selectivity.py
docs/: structures.md
examples/: intro_bhv.ipynb  intro_lfp.ipynb  intro_neuron.ipynb  intro_population.ipynb
